Xcode IDE - INPUT_FILE Variable Changed
Because I use Xcode, I can not read directly from file. I always have a
“Const String Variable” to read the input txt.

So I changed the text file name to the variable  INPUT_FILE when you
open the file.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@ myProject_CalorieCounterFoodDatabase/Debug/myProject_CalorieCounterFoodDatabase.
 *.exe
 *.ilk
 Project_Calorie-Counter-Food-Database/Debug/Project_Calorie-Counter-Food-Database.log
+*.pbxproj
+
+*.xcworkspacedata
+
+*.xcuserstate
+
+*.xcscheme
+
+*.plist
+
+main.cpp
