Adding Shannon's link for input file

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,49 @@ Project_Calorie-Counter-Food-Database/Debug/Project_Calorie-Counter-Food-Databas
 *.plist
 
 main.cpp
+
+.metadata/.lock
+
+.metadata/.log
+
+.metadata/.plugins/org.eclipse.cdt.core/.log
+
+.metadata/.plugins/org.eclipse.cdt.make.core/specs.c
+
+.metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
+
+.metadata/.mylyn/repositories.xml.zip
+
+.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/.indexes/properties.index
+
+*.snap
+
+*.properties
+
+*.index
+
+*.resources
+
+*.prefs
+
+.metadata/.plugins/org.eclipse.rse.core/.log
+
+*.mark
+
+.metadata/.plugins/org.eclipse.rse.ui/.log
+
+.metadata/.plugins/org.eclipse.team.cvs.core/.running
+
+*.ini
+
+RemoteSystemsTempFiles/.project
+
+*.pdom
+
+*.xml
+
+*.c
+
+*.xmi
+
+*.history
