made changes to work with Primary & Secondary compare functions
I still need to work on writeToOutputFile

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ RemoteSystemsTempFiles/.project
 *.history
 
 *.xccheckout
+newFoodInput.txt
+Project_Calorie-Counter-Food-Database/Debug/Project_Calorie-Counter-Food-Database.Build.CppClean.log
